#14 Intergrate swagger
