# storage/api-docs/api-docs.json
@@ -817,17 +817,221 @@
                 ]
             }
         },
-        "/api/friends/request/cancel/{friendrequest}": {
+        "/api/friends/unfriend/{friends}": {
             "delete": {
                 "tags": [
-                    "Cancel Friend Request"
+                    "Unfriend A User"
                 ],
-                "summary": "Cancel Friend Request",
-                "description": "Cancel Friend Request",
-                "operationId": "cancel friend request",
+                "summary": "Unfriend a user",
+                "description": "Unfriend A User",
+                "operationId": "unfriend a user",
                 "responses": {
                     "201": {
                         "description": "successful cancel friend request",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthennticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/api/likes/my-likes": {
+            "get": {
+                "tags": [
+                    "Personal Likes"
+                ],
+                "summary": "Personal Likes",
+                "description": "Personal Likes",
+                "operationId": "personal likes",
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthennticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/api/likes/create": {
+            "post": {
+                "tags": [
+                    "Add new Like"
+                ],
+                "summary": "Add new Like",
+                "description": "Add new Like",
+                "operationId": "add new like",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "post_id",
+                                    "react_id"
+                                ],
+                                "properties": {
+                                    "post_id": {
+                                        "type": "integer"
+                                    },
+                                    "react_id": {
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        },
+                        "application/json": {
+                            "schema": {}
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "successful add like",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthennticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/api/likes/update/{like}": {
+            "put": {
+                "tags": [
+                    "Update reactions"
+                ],
+                "summary": "Update reactions",
+                "description": "Update reactions",
+                "operationId": "update reactions",
+                "parameters": [
+                    {
+                        "name": "post",
+                        "in": "path",
+                        "description": "ID of the like to update",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "post_id",
+                                    "react_id"
+                                ],
+                                "properties": {
+                                    "post_id": {
+                                        "type": "integer"
+                                    },
+                                    "react_id": {
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        },
+                        "application/json": {
+                            "schema": {}
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "successful confirm friend request",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthennticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/api/likes/delete/{like}": {
+            "delete": {
+                "tags": [
+                    "Delete reactions"
+                ],
+                "summary": "Delete reactions",
+                "description": "Delete reactions",
+                "operationId": "delete reactions",
+                "parameters": [
+                    {
+                        "name": "post",
+                        "in": "path",
+                        "description": "ID of the like to delete",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "successful confirm friend request",
                         "content": {
                             "application/json": {
                                 "schema": {}
